--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,52 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding-bottom: 4px;
+  padding-top: 4px;
 }
 
 .title {
   background: #e3f4ff;
+  border: solid red;
+  font-size: 16px;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  border: solid red;
+  padding-top: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 16px;
+  margin: 8px;
+
 }
 
 .button-container {
   background: #e3f4ff;
+  border: solid red;
+  width: auto;
+  height: auto;
+  padding: 5%;
+  text-align: center;
+  margin: 8px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding-top: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 8px;
 }
