--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -9,11 +13,29 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px;
+}
+
+.left-links{
+  align-self: flex-start;
+  align-self: center;
+  margin:8px;
+
+}
+
+.right-links{
+  margin:8px;
+  align-self: flex-end;
+  align-self: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
 }
 
 a {
