--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,36 +6,67 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
 
 .header {
+  display: flex;
+  flex: 1;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
 .profile-image {
+  display: flex;
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  align-self: center;
+  margin: 8px;
+  gap:16px
 }
 
 .logo {
+  display: flex;
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin: 8px;
 }
 
 button {
+  display: flex;
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left: auto;
+  align-self: center;
+  gap: 16px;
 }
+
+/*.right{
+  display: flex;
+  align-self: center;
+  margin-left: auto;
+}*/
+
+.links{
+  display: flex;
+  gap: 16px;
+  align-self: center;
+  margin: 8px;
+  padding: 8px;
+}
+
+
 
 a {
   /* this removes the line under our links */
@@ -45,4 +76,5 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
 }
