--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+ display: flex;
 }
 
 img {
@@ -8,8 +9,11 @@ img {
 }
 
 .title {
+  display: flex;
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
+  
 }
 
 /* do not edit this footer */
